<?xml version="1.0"?>
<package format="2">
  <name>moveit_unit_test</name>
  <version>0.0.0</version>
  <description>The moveit_unit_test package</description>

  <maintainer email="ros@todo.todo">ros</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>

</package>
